feat: Implement image modals

--- a/src/styles/foundations/_reset.scss
+++ b/src/styles/foundations/_reset.scss
@@ -78,3 +78,12 @@ button {
   font-family: inherit;
   font-size: inherit;
 }
+
+dialog {
+  margin: 0;
+  padding: 0;
+  border: none;
+  background: none;
+  max-width: none;
+  max-height: none;
+}
